<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sajilo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading</string>
    <string name="connection_msg" tools:ignore="ExtraTranslation">No Network Connection!!!</string>
    <string name="remember_me">Remember Me</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="no_item_found">No Item Found</string>
    <string name="menu_home">Home</string>
    <string name="menu_user_profile">Profile</string>
    <string name="menu_servies">Services</string>
    <string name="menu_log_out">Logout</string>
    <string name="tag_line">Welcome Sajilo</string>
    <string name="back_key">Please click back again to exit</string>
    <string name="example_string">Line 1\Line2\Line n</string>
    <string name="search">Search</string>
    <string name="empty_cart">Cart Empty</string>
    <string name="subTotal">subtotal</string>
    <string name="discount_on_order">Discount on Order</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="total">Total</string>
    <string name="number">5000</string>
    <string name="number1">500</string>
    <string name="free">FREE</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
</resources>